internal/xds/translator/testdata/out/xds-ir-sublinear/http-route-multiple-matches.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - example.com
    matcher:
      matcherTree:
        exactMatchMap:
          map:
            /v1/example:
              action:
                name: route_list
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.RouteList
                  routes:
                  - match:
                      pathSeparatedPrefix: /v1/example
                      queryParameters:
                      - name: debug
                        stringMatch:
                          exact: "yes"
                    name: envoy-gateway/httproute-2/rule/0/match/0/example.com
                    route:
                      cluster: first-route-dest
                      upgradeConfigs:
                      - upgradeType: websocket
                  - match:
                      pathSeparatedPrefix: /v1/example
                    name: envoy-gateway/httproute-3/rule/0/match/0/example.com
                    route:
                      cluster: second-route-dest
                      upgradeConfigs:
                      - upgradeType: websocket
        input:
          name: request-headers
          typedConfig:
            '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
            headerName: :path
      onNoMatch:
        matcher:
          matcherTree:
            input:
              name: request-headers
              typedConfig:
                '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                headerName: :path
            prefixMatchMap:
              map:
                /v1/example/:
                  action:
                    name: route_list
                    typedConfig:
                      '@type': type.googleapis.com/envoy.config.route.v3.RouteList
                      routes:
                      - match:
                          pathSeparatedPrefix: /v1/example
                          queryParameters:
                          - name: debug
                            stringMatch:
                              exact: "yes"
                        name: envoy-gateway/httproute-2/rule/0/match/0/example.com
                        route:
                          cluster: first-route-dest
                          upgradeConfigs:
                          - upgradeType: websocket
                      - match:
                          pathSeparatedPrefix: /v1/example
                        name: envoy-gateway/httproute-3/rule/0/match/0/example.com
                        route:
                          cluster: second-route-dest
                          upgradeConfigs:
                          - upgradeType: websocket
    name: first-listener/example_com
  - domains:
    - example.net
    matcher:
      matcherTree:
        exactMatchMap:
          map:
            /v1/status:
              action:
                name: route_list
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.RouteList
                  routes:
                  - match:
                      headers:
                      - name: version
                        stringMatch:
                          exact: one
                      pathSeparatedPrefix: /v1/status
                    name: envoy-gateway/httproute-4/rule/0/match/0/example.net
                    route:
                      cluster: third-route-dest
                      upgradeConfigs:
                      - upgradeType: websocket
                  - match:
                      pathSeparatedPrefix: /v1/status
                    name: envoy-gateway/httproute-5/rule/0/match/0/example.net
                    route:
                      cluster: fourth-route-dest
                      upgradeConfigs:
                      - upgradeType: websocket
        input:
          name: request-headers
          typedConfig:
            '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
            headerName: :path
      onNoMatch:
        matcher:
          matcherTree:
            input:
              name: request-headers
              typedConfig:
                '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                headerName: :path
            prefixMatchMap:
              map:
                /v1/status/:
                  action:
                    name: route_list
                    typedConfig:
                      '@type': type.googleapis.com/envoy.config.route.v3.RouteList
                      routes:
                      - match:
                          headers:
                          - name: version
                            stringMatch:
                              exact: one
                          pathSeparatedPrefix: /v1/status
                        name: envoy-gateway/httproute-4/rule/0/match/0/example.net
                        route:
                          cluster: third-route-dest
                          upgradeConfigs:
                          - upgradeType: websocket
                      - match:
                          pathSeparatedPrefix: /v1/status
                        name: envoy-gateway/httproute-5/rule/0/match/0/example.net
                        route:
                          cluster: fourth-route-dest
                          upgradeConfigs:
                          - upgradeType: websocket
    name: first-listener/example_net
  - domains:
    - '*.com'
    matcher:
      matcherTree:
        exactMatchMap:
          map:
            /foo:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  match:
                    pathSeparatedPrefix: /foo
                  name: envoy-gateway/httproute-1/rule/0/match/0/*.com
                  route:
                    cluster: fifth-route-dest
                    upgradeConfigs:
                    - upgradeType: websocket
        input:
          name: request-headers
          typedConfig:
            '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
            headerName: :path
      onNoMatch:
        matcher:
          matcherTree:
            input:
              name: request-headers
              typedConfig:
                '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                headerName: :path
            prefixMatchMap:
              map:
                /foo/:
                  action:
                    name: route
                    typedConfig:
                      '@type': type.googleapis.com/envoy.config.route.v3.Route
                      match:
                        pathSeparatedPrefix: /foo
                      name: envoy-gateway/httproute-1/rule/0/match/0/*.com
                      route:
                        cluster: fifth-route-dest
                        upgradeConfigs:
                        - upgradeType: websocket
    name: first-listener/*_com
  - domains:
    - '*.net'
    matcher:
      matcherTree:
        exactMatchMap:
          map:
            /foo:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  match:
                    pathSeparatedPrefix: /foo
                  name: envoy-gateway/httproute-1/rule/0/match/0/*.net
                  route:
                    cluster: sixth-route-dest
                    upgradeConfigs:
                    - upgradeType: websocket
        input:
          name: request-headers
          typedConfig:
            '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
            headerName: :path
      onNoMatch:
        matcher:
          matcherTree:
            input:
              name: request-headers
              typedConfig:
                '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                headerName: :path
            prefixMatchMap:
              map:
                /foo/:
                  action:
                    name: route
                    typedConfig:
                      '@type': type.googleapis.com/envoy.config.route.v3.Route
                      match:
                        pathSeparatedPrefix: /foo
                      name: envoy-gateway/httproute-1/rule/0/match/0/*.net
                      route:
                        cluster: sixth-route-dest
                        upgradeConfigs:
                        - upgradeType: websocket
    name: first-listener/*_net
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        prefix: /
      name: envoy-gateway/httproute-1/rule/0/match/0/*
      route:
        cluster: seventh-route-dest
        upgradeConfigs:
        - upgradeType: websocket
